k8s/v1.1/middleware.yaml
# k8s/v1.1/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-v1-1
  namespace: product-v1-1
spec:
  stripPrefix:
    prefixes:
      - /v1-1
