k8s/v1.1/deployment.yaml
# k8s/v1.1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
  namespace: product-v1-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          image: tkg31/spring-boot-crud-app:v1.1.0
          ports:
            - containerPort: 8080
