k8s/v1.1/ingressroute.yaml
# k8s/v1.1/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: product-ingress
  namespace: product-v1-1
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/v1-1`)
      kind: Rule
      middlewares:
        - name: strip-v1-1
      services:
        - name: product-service
          port: 80
